Rev 1 HTML Forms

--- a/html-forms/index.html
+++ b/html-forms/index.html
@@ -22,16 +22,22 @@
       </select>
 
       <div>
-        <label for="language"><p>Favorite Language (choose one)</p></label>
+        <p>Favorite Language (choose one)</p>
       </div>
       <div>
-        <input type="radio" name="language" value="HTML"> HTML
-        <input type="radio" name="language" value="CSS">CSS
-        <input type="radio" name="language" value="JavaScript">JavaScript
+        <label>
+          <input type="radio" name="language" value="HTML"> HTML
+        </label>
+        <label>
+          <input type="radio" name="language" value="CSS">CSS
+        </label>
+        <label>
+          <input type="radio" name="language" value="JavaScript">JavaScript
+        </label>
       </div>
 
       <div>
-        <label for sign-up p"><p>Would you like to sign up for more information?</p></label>
+        <label for="sign-up"><p>Would you like to sign up for more information?</p></label>
       </div>
       <input type="checkbox" name="sign-up" value="sign-up-confirmed"> Sign me up!
 
