Rev 2 HTML Forms Exercise

--- a/html-forms/index.html
+++ b/html-forms/index.html
@@ -14,7 +14,7 @@
       <div>
         <label for="why">Why is coding cool?</label>
       </div>
-      <select name="why">
+      <select name="why" id="why">
         <option value="">Select an option</option>
         <option value="Because it's interesting">Because it's interesting</option>
         <option value="Because it's fun">Because it's fun</option>
