--- a/html-web-page/index.html
+++ b/html-web-page/index.html
@@ -25,7 +25,7 @@
   <h2>Make all your friends jelly of your stock jelly!</h2>
   </header>
   <main>
-    <p>Here at JOTMC Inc., we are constantly striving to supply our customers with the highest quality and most unique jellies on a monthly basis. For the jelly lover in your life (or yourself!), this is the gift that keeps on giving all year round. We offer three tiers of monthly elly joy, and each one offers their own perks. Here is a breakdown of each, as well as your monthly price:</p>
+    <p>Here at JOTMC Inc., we are constantly striving to supply our customers with the highest quality and most unique jellies on a monthly basis. For the jelly lover in your life (or yourself!), this is the gift that keeps on giving all year round. We offer three tiers of monthly jelly joy, and each one offers their own perks. Here is a breakdown of each, as well as your monthly price:</p>
     <table>
       <thead>
         <th></th>
