REVISED CSS Two Column Layout

--- a/css-two-column-layout/index.html
+++ b/css-two-column-layout/index.html
@@ -16,6 +16,7 @@
       <p>We've dedicated thousands of man hours to making healthcare instituitions in the Helium network run 10x more efficiently and deliver an unparalleled quality of care.</p>
     </heading>
     <section>
+      <div class="row">
       <div class="col">
         <div class="block">
           <div>
@@ -36,8 +37,9 @@
               facility, reduce waste and improve quality of care.</p>
           </div>
         </div>
-
+        </div>
       </div>
+      <div class="row">
       <div class="col">
         <div class="block">
           <div>
@@ -58,7 +60,8 @@
           </div>
         </div>
       </div>
-      <div class="col" id="learn-more">
+      </div>
+      <div class="row" id="learn-more">
         <button>Learn More</button>
       </div>
     </section>
