Completed product.html

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>CSS Challenge - Canvas Medical</title>
+  <title>Home - Canvas Medical</title>
   <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body id="page-home">
   <div class="container-full">
     <header class="row container">
       <div class="col-20"><a href="index.html"><img src="images/logo-blue.svg" alt="Canvas Logo" class="logo"></a></div>
@@ -33,7 +33,7 @@
       </div>
     </section>
     </div>
-    <main class="row container-full">
+    <main class="row container-full grey-background">
       <section class="row container">
         <div class="col-100  padding-block">
           <div class="row centered">
@@ -61,7 +61,7 @@
         </div>
       </section>
     </main>
-    <section class="row container">
+    <section id="learn-more" class="row container">
       <div class="col-40">
         <h2>Ready to learn more?</h2>
         <p>Schedule a private meeting now</p>
