--- a/css-canvas-medical/product.html
+++ b/css-canvas-medical/product.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>CSS Challenge - Canvas Medical</title>
+  <title>Product - Canvas Medical</title>
   <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body id="page-product">
   <div class="container-full">
     <header class="row container">
       <div class="col-20"><a href="index.html"><img src="images/logo-blue.svg" alt="Canvas Logo" class="logo"></a></div>
@@ -26,42 +26,64 @@
     <section class="row hero-banner container">
       <div class="overlay row">
         <div class="col-60">
-          <h1>The EMR Reimagined for Primary Care</h1>
-          <p>Can't remember the last time  you talked with a patient without focusing on the EMR? Canvas lets you rediscover joy in the work you do. Capture meaningful data, identify gaps in care, and move seamlessly between tasks within the platform. You stay present with patients while your whole care team stays up-to-spead. Be a better doctor with canvas, designed for primary care providers with the help of primary care providers.</p>
-          <a href="contact-us.html" class="blue-button">Get Started</a>
+          <h1>It's the foundation for patient-centered primary care.</h1>
+          <p>Canvas creates a shared understanding of patient care across clinicians, staff, and patients themselves &mdash; making you more productive, less stressed, and adding just a bit more joy into your practice of medicine.</p>
         </div>
       </div>
     </section>
     </div>
-    <main class="row container-full">
-      <section class="row container">
-        <div class="col-100  padding-block">
-          <div class="row centered">
-            <div class="col-50">
-              <h2>Clinicians Prefer Canvas</h2>
-              <p>Physician-owned primary care practices across the country have already made Canvas the fabric of their care.</p>
+    <main>
+      <section class="row container-full grey-background">
+          <div class="row two-column-block padding-block centered container">
+            <div class="col-40">
+              <img src="images/product/product-image-1.png" alt="Product Screenshot" width="90%">
             </div>
-          </div>
-          <div class="row centered two-column-block">
-            <div class="col-50">
-              <ul class="no-bullets">
-                <li>Cascade Family Practice, Portland OR</li>
-                <li>Temescal Creek Medicine, Oakland, CA</li>
-                <li>San Juan Healthcare, Friday Harbor WA</li>
-              </ul>
-            </div>
-            <div class="col-50">
-              <ul class="no-bullets">
-                <li>Ward Medical Clinic, Bonifay FL</li>
-                <li>Caribou Medical, Towanda PA</li>
-                <li>Bay Tree Family Care, Red Bay AL</li>
-              </ul>
+            <div class="col-10"></div>
+            <div class="col-50 align-left">
+              <h2>It puts care at your command</h2>
+              <p>You don't have to click a dozen times to order a flu shot or bounce around fie windows to discover the last blood count. Canvas pulls everything you need directly into your note, so you never have to leave it. And becauase Canvas learns from every interaction, it gets smarter with every patient you see.</p>
+              <a href="implementation.html">Learn more about charting.</a>
+              <p><q>Canvas works three times as fast, improves performance dramatically on key quality metrics, and is incredibily easy to use. The right information is presented in the right way at the right time, and the product leverages technology to actually improve the quality of care I provide.</q></p>
+              <p>&mdash; Dr. Steve Magee, Family Physician</p>
             </div>
           </div>
         </div>
       </section>
+      <section class="row container">
+        <div class="row two-column-block padding-block centered">
+          <div class="col-40 align-left">
+            <h2>It brings your population to life</h2>
+            <p>Canvas makes it simple to search and take action across your entire patient panel, so you know who needs extra help and how best to give it to them. Easily reach out to any subgroup population with proactive interventions, and take comfort knowing you're a step ahead.</p>
+            <a href="#">Learn more about population management.</a>
+            <p><q>Which of my uncontrolled diabetic patients haven't had a test in the past 3 months? Which of my patients are on potentially unsafe levels of opiods according to the most recent guidelines? That doesn't seem like a lot to ask and those are tremondously important questions. But I just couldn't get an answer from our old system! Canvas is light-years ahead.</q></p>
+            <p>&mdash; Dr. Ninad Athale, Family Physician</p>
+          </div>
+          <div class="col-10"></div>
+          <div class="col-50">
+            <img src="images/product/product-image-2.png" alt="Product Screenshot" width="90%">
+          </div>
+        </div>
+        </div>
+      </section>
+      <section class="row container-full grey-background">
+        <div class="row two-column-block padding-block centered container">
+          <div class="col-40">
+            <img src="images/product/product-image-3.png" alt="Product Screenshot" width="90%">
+          </div>
+          <div class="col-10"></div>
+          <div class="col-50 align-left">
+            <h2>It automates performance improvement</h2>
+            <p>Clinical quality and revenue cycle reports can help you understand performance, but they aren't enough to improve quality and increase revenue day after day. Canvas automates quality protocols and charge capture so clinicians can focus on more complex work only they can do.</p>
+            <a href="#">Learn more about practice management and billing.</a>
+            <p><q>With MIPS a reality and fee-for-service billing rules as complex as ever, to be honest I didn't know how we were going to keep up. We're a small practice and we don't have a big quality team or a group of coders to catch everything. The automation in Canvas has completely eliminated my concerns around quality and revenue performance.</q></p>
+            <p>&mdash; Dr. Sam Ward, Family Physician</p>
+
+          </div>
+        </div>
+        </div>
+      </section>
     </main>
-    <section class="row container">
+    <section class="row container" id="learn-more">
       <div class="col-40">
         <h2>Ready to learn more?</h2>
         <p>Schedule a private meeting now</p>
