--- a/css-canvas-medical/implementation.html
+++ b/css-canvas-medical/implementation.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>CSS Challenge - Canvas Medical</title>
+  <title>Implementation - Canvas Medical</title>
   <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container-full">
+  <div class="container-full page-implementation">
     <header class="row container">
       <div class="col-20"><a href="index.html"><img src="images/logo-blue.svg" alt="Canvas Logo" class="logo"></a></div>
       <div class="col-10"></div>
@@ -26,39 +26,45 @@
     <section class="row hero-banner container">
       <div class="overlay row">
         <div class="col-60">
-          <h1>The EMR Reimagined for Primary Care</h1>
-          <p>Can't remember the last time  you talked with a patient without focusing on the EMR? Canvas lets you rediscover joy in the work you do. Capture meaningful data, identify gaps in care, and move seamlessly between tasks within the platform. You stay present with patients while your whole care team stays up-to-spead. Be a better doctor with canvas, designed for primary care providers with the help of primary care providers.</p>
-          <a href="contact-us.html" class="blue-button">Get Started</a>
+          <h1>Canvas will be the second best investment you've ever made, guaranteed.</h1>
+          <p>Becoming a physician will endure as your all-time best investment decision, and on behalf of your community, we're grateful for it. When you choose to invest in Canvas, we'll ensure you list Canvas as the second best investment you've ever made for your practice, guaranteed. Contact us when you're ready to discuss the details.</p>
         </div>
       </div>
     </section>
     </div>
     <main class="row container-full">
       <section class="row container">
-        <div class="col-100  padding-block">
-          <div class="row centered">
-            <div class="col-50">
-              <h2>Clinicians Prefer Canvas</h2>
-              <p>Physician-owned primary care practices across the country have already made Canvas the fabric of their care.</p>
-            </div>
-          </div>
-          <div class="row centered two-column-block">
-            <div class="col-50">
-              <ul class="no-bullets">
-                <li>Cascade Family Practice, Portland OR</li>
-                <li>Temescal Creek Medicine, Oakland, CA</li>
-                <li>San Juan Healthcare, Friday Harbor WA</li>
-              </ul>
-            </div>
-            <div class="col-50">
-              <ul class="no-bullets">
-                <li>Ward Medical Clinic, Bonifay FL</li>
-                <li>Caribou Medical, Towanda PA</li>
-                <li>Bay Tree Family Care, Red Bay AL</li>
-              </ul>
-            </div>
-          </div>
+        <div class="col-20"></div>
+        <div class="col-60 styled-numbered-list">
+          <h2>Calculate an estimate of your ROI with Canvas</h2>
+          <ol>
+            <li>
+              <h3>Making the Decision to Switch</h3>
+              <p>You should only move forward with Canvas if and when you have determined that we far outperform other vendors and offer an unmatched return on investment. Our goal is to give you as much information as possible to make this determination one way or the other. We will provide access to a sandbox of the Canvas application for you to get a feel for the platform as well as references to current customers to talk about their experience. </p>
+            </li>
+            <li>
+              <h3>Interfaces and Community Integration</h3>
+              <p>Canvas is meant to integrate with your existing interfaces and communtiy resources. At a a minimum, this means porting over your fax number, enrolling your payers with our clearinghouse, and getting bidirectional lab feeds running. We'll also load your preferred specialists and imaging centers into Canvas so that sending referrals and closing loops is seamless. Finally, if interfaces with with health information exchanges or other information technology vendors are important, we will work with you to determine what we can deliver and when.</p>
+            </li>
+            <li>
+              <h3>Data Migration</h3>
+              <p>The first thing we will do is gain access to a full backup of your current data, which we have executed successfully with both remotely hosted and on-premise EMR databases. Then our work begins two import into Canvas. Patient demographics and information like medications, problems, and allergies is relatively straightforward. While importing clinical notes and documents is more challenging, our team has been able to do this at a high level of fidelity with a wide variety of EMRs.</p>
+            </li>
+            <li>
+              <h3>Training and Site Visit</h3>
+              <p>We will work with you to configure Canvas properly, including clinical content, charge schedules, and much more. Role-based trainings will be done a few weeks prior to go-live to familiarize relevant team members with clinical, practice management, and billing workflows. Either before or during go-live, one of our team can visit your practice to work side-by-side witg you on implementation and training.</p>
+            </li>
+            <li>
+              <h3>Go-Live and Tuning</h3>
+              <p>Go-live is when you start using Canvas with real patients in your practice. We will be with you, either in-person or remotely depending on your preference, to make sure everything goes smoothly. There is always fine tuning to do once you have a handful of encounters in Canvas under your belt: changing clinical microtemplates, setting up new automations, modifying practice management settings, and more. We are here to help iwth it all.</p>
+            </li>
+            <li>
+              <h3>Sustained Performance</h3>
+              <p>All EMR contracts should contain assurances against broken promises and provide support over the long term. Our Performance Warranty means that if we are not meeting expectations, you can terminate the agreement and receive all payments back. (We do not expect this to happen). For our Standard plans, we also offer a MIPS guarantee: if you receive a negative adjustment, we will cover it. And for everyone, we provide unlimited 24/7 support at no charge. We expect this to be a long, productive partnership for us both.</p>
+            </li>
+          </ol>
         </div>
+        <div class="col-20"></div>
       </section>
     </main>
     <section class="row container">
