--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body id="page-home">
-  <div class="container-full">
+<body>
+  <div class="container-full page-home">
     <header class="row container">
       <div class="col-20"><a href="index.html"><img src="images/logo-blue.svg" alt="Canvas Logo" class="logo"></a></div>
       <div class="col-10"></div>
