--- a/css-canvas-medical/about-us.html
+++ b/css-canvas-medical/about-us.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>CSS Challenge - Canvas Medical</title>
+  <title>About Us - Canvas Medical</title>
   <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container-full">
+  <div class="container-full page-about-us">
     <header class="row container">
       <div class="col-20"><a href="index.html"><img src="images/logo-blue.svg" alt="Canvas Logo" class="logo"></a></div>
       <div class="col-10"></div>
@@ -26,41 +26,103 @@
     <section class="row hero-banner container">
       <div class="overlay row">
         <div class="col-60">
-          <h1>The EMR Reimagined for Primary Care</h1>
-          <p>Can't remember the last time  you talked with a patient without focusing on the EMR? Canvas lets you rediscover joy in the work you do. Capture meaningful data, identify gaps in care, and move seamlessly between tasks within the platform. You stay present with patients while your whole care team stays up-to-spead. Be a better doctor with canvas, designed for primary care providers with the help of primary care providers.</p>
-          <a href="contact-us.html" class="blue-button">Get Started</a>
+          <h1>Clinicians should have software they love.</h1>
+          <p>Our mission is to give clinicians and their teams highly usable, intelligent tools to advance their practice of medicine &mdash; and improve their day-to-day. </p>
         </div>
       </div>
     </section>
     </div>
-    <main class="row container-full">
+    <main class="row container-full padding-bottom">
       <section class="row container">
-        <div class="col-100  padding-block">
-          <div class="row centered">
-            <div class="col-50">
-              <h2>Clinicians Prefer Canvas</h2>
-              <p>Physician-owned primary care practices across the country have already made Canvas the fabric of their care.</p>
-            </div>
-          </div>
-          <div class="row centered two-column-block">
-            <div class="col-50">
-              <ul class="no-bullets">
-                <li>Cascade Family Practice, Portland OR</li>
-                <li>Temescal Creek Medicine, Oakland, CA</li>
-                <li>San Juan Healthcare, Friday Harbor WA</li>
-              </ul>
-            </div>
-            <div class="col-50">
-              <ul class="no-bullets">
-                <li>Ward Medical Clinic, Bonifay FL</li>
-                <li>Caribou Medical, Towanda PA</li>
-                <li>Bay Tree Family Care, Red Bay AL</li>
-              </ul>
-            </div>
-          </div>
+        <div class="col-25"></div>
+        <div class="col-50">
+          <h2 class="centered">What We Believe</h2>
+          <p>Why did we enter this crowded field? Because medical records have fallen dramatically short of their promise to improve the quality and efficiency of health care. Clinicians spend far too long at their computers. Workflows are overly restrictive. Valuable medical data is left unstructured.
+          </p>
+          <p>We are honored, and humbled, when a practice chooses us as their technology partner. Medicine is a delicate craft that mixes art and science &mdash; technology can help or hinder this craft. Workng with clinicians across the country, we think we have begun to build something that helps.</p>
+          <p><strong><a href="blog.html">Check out our blog for updates, data, and essays on Canvas and American primary care.</a></strong></p>
         </div>
+        <div class="col-25"></div>
       </section>
     </main>
+    <section class="row container-full grey-background">
+
+        <div class="row team container">
+          <h3 class="col-100 centered">Our Team</h3>
+          <div class="profile col-30">
+            <img src="images/about-us/team-members/denis.jpg" alt="Denis Bajet">
+            <h3 class="person-name">Denis Bajet</h3>
+            <p class="person-title">Senior Software Engineer</p>
+          </div>
+          <div class="profile col-30">
+            <img src="images/about-us/team-members/bean.jpg" alt="Beau Gunderson">
+            <h3 class="person-name">Beau Gunderson</h3>
+            <p class="person-title">CTO</p>
+          </div>
+          <div class="profile col-30">
+            <img src="images/about-us/team-members/jessica.jpg" alt="Jessica Herbert">
+            <h3 class="person-name">Jessica Herbert</h3>
+            <p class="person-title">Customer Implementation and Support Manager</p>
+          </div>
+          <div class="profile col-30">
+            <img src="images/about-us/team-members/andrew.png" alt="Andrew Hines">
+            <h3 class="person-name">Andrew Hines</h3>
+            <p class="person-title">CEO</p>
+          </div>
+          <div class="profile col-30">
+            <img src="images/about-us/team-members/julian.jpg" alt="Julian Malinak">
+            <h3 class="person-name">Julian Malinak</h3>
+            <p class="person-title">Chief Operating Officer</p>
+          </div>
+          <div class="profile col-30">
+            <img src="images/about-us/team-members/pedro.jpeg" alt="Pedro Torres">
+            <h3 class="person-name">Pedro Torres</h3>
+            <p class="person-title">Software Engineer</p>
+          </div>
+          <div class="profile col-30">
+            <img src="images/about-us/team-members/mel.jpg" alt="Mel van Londen">
+            <h3 class="person-name">Mel van Londen</h3>
+            <p class="person-title">Head of Product</p>
+          </div>
+          <div class="profile col-30">
+            <img src="images/about-us/team-members/michael.jpg" alt="Michael Zimmerman MD">
+            <h3 class="person-name">Michael Zimmerman MD</h3>
+            <p class="person-title">Medical Director</p>
+          </div>
+          <div class="profile col-30">
+            <img src="images/about-us/team-members/you.png" alt="Apply to work at Canvas">
+            <h3 class="person-name">You</h3>
+            <p class="person-title">Software Engineer</p>
+          </div>
+
+          <div class="col-100 centered padding-top">
+            <h2>Clinical Advisory Board</h2>
+          </div>
+          <div class="col-30 centered">
+            <p>Andrew Nadler MD, Internal Medicine</p>
+            <p>Bruce Block MD, Pediatrics</p>
+            <p>Anna Hines FNP, Family Nurse Practitioner</p>
+          </div>
+          <div class="col-30 centered">
+            <p>Ninad Athale MD, Family Medicine</p>
+            <p>Steve Magee MD, Family Medicine</p>
+          </div>
+          <div class="col-30 centered">
+            <p>Meenesh Bhimani MD, Emergency Medicine</p>
+            <p>Erik McDonald MD, Orthopedic Surgery</p>
+          </div>
+        </div>
+    </section>
+    <section class="container row our-story">
+      <div class="col-25"></div>
+      <div class="col-50">
+        <h3 class="centered">Our Story</h3>
+        <p>Andrew founded Canvas in 2015 after years of seeing his wife Anna &mdash; a family nurse practitioner &mdash; sacrifice family time in the evenings to &quot;finish&quot; charting. It never ended.</p>
+        <p>Andrew knew that the answer wasn't to go out and do it alone. He started to fill the gaps in his experience. Seven practicing clinicians formed the clinical advisory board &mdash; rather than leave practice to work full-time with Canvas, they used and reviewed product changes in their practices. Our Medical Director, Dr. Zimmerman, joined when he saw the potential of Canvas to help independent practices like his practice, Temescal Creek Medicine in Oakland, CA. Julian joined Canvas after working at Medicare and seeing the failures of current technology to keep up with increasing regulatory demands without burdening clinicians. Joe and a world class group of software developers joined to accelerate our ability to listen to clinician feedback and constantly improve the product.</p>
+        <p>With Canvas, we created a fundamentally differant way of charting that completely eliminates the need for menus and pop-ups. The name of the company describes the charting experience &mdash; it feels like a blank canvas where you can tell the patient's story and seamlessly complete notes, orders, and chart review on a single, unified screen. With seamlessly integrated population health, billing, and practice management, Canvas is a reimagined platform for the modern primary care practice.</p>
+      </div>
+      <div class="col-25"></div>
+    </section>
     <section class="row container">
       <div class="col-40">
         <h2>Ready to learn more?</h2>
