Added Pop-up with Accuracy Results and Reset Button

--- a/javascript-typing-tutor/index.html
+++ b/javascript-typing-tutor/index.html
@@ -45,6 +45,15 @@
       <span>w</span>
     </div>
   </main>
+
+<div class="modal hide">
+  <div class="content">
+    <h2>Complete!</h2>
+    <h3>Your Score:</h3>
+    <p class="score"></p>
+    <button class="reset">Play Again?</button>
+  </div>
+</div>
   <script src="main.js"></script>
 </body>
 </html>
